--- a/docs/finished/20181217.md
+++ b/docs/finished/20181217.md
@@ -2,6 +2,14 @@
 
 1. webpack 基本配置
 
-    模块化打包的大致思路，设置入口，沿着import, 使用loader 和 plugins 打包,最终输出，webpack-dev-server 实现模块热更新（HMR)
+    模块化打包的大致思路，设置入口，沿着import, 使用loader 和 plugins 打包,最终输出，webpack-dev-server 实现模块热更新（HMR),代码的分离技巧
 
-2.  
+2. webpack 教程继续学习
+
+*   (1) 动态分离chunck,promise，await,async 的理解，箭头函数 不用return 的写法。
+*   (2) 尾调用知识,尾递归
+    
+    关键词：调用帧(call frame)，调用栈（call stack)
+
+
+
