--- a/docs/finished/20181217.md
+++ b/docs/finished/20181217.md
@@ -14,3 +14,10 @@
     渐进式网络应用程序(Progressive Web Application - PWA)
 
 
+# Webkit 的加载和渲染过程
+
+1. 网页的加载过程， 获取到html，js,css 等资源
+
+2. 网页的渲染过程，怎么变成可视化的过程。
+
+
