--- a/docs/finished/20181217.md
+++ b/docs/finished/20181217.md
@@ -18,6 +18,10 @@
 
 1. 网页的加载过程， 获取到html，js,css 等资源
 
-2. 网页的渲染过程，怎么变成可视化的过程。
+2. 网页的渲染过程，怎么变成可视化的过程
+
+设计概念：chromium v8 ,rendering Layer, gpu 硬件加速渲染（性能高，适合html5 新页面），cpu 软件渲染（不适合3d） 
+
+
 
 
