增加windows 脚本用于提交打包后静态代码

--- a/docs/goal/2019flag.md
+++ b/docs/goal/2019flag.md
@@ -1,6 +1,6 @@
 # 2019 flag
 
-::: warning
+::: warning 名言
 规划非常重要,打开门才能进入另一个世界
 :::
 
@@ -15,4 +15,9 @@
 5. 感情？
 
 6. 10万存款
+
+
+::: warning 总结
+今年猛点好
+:::
 
