删除了一些无效笔记

--- a/docs/docs/17koa2.md
+++ b/docs/docs/17koa2.md
@@ -2,9 +2,11 @@
 
 # 前言
 
-* 已经具备了node.js,koa2 ,js，es6,es8 基础
+* 已经具备了nodejs,koa2,js,es6,es8 基础
 
-* node 集成到项目中 , 如何在启动中启动typescript 报错，默认集成不会影响运行
+* typescript 集成到项目中，执行命令前先构建 tsc && node
+
+* mongoDb 的安装与入门使用
 
 # 项目结构
 
