--- a/docs/docs/17koa2.md
+++ b/docs/docs/17koa2.md
@@ -2,12 +2,45 @@
 
 # 前言
 
-* 已经具备了nodejs,koa2,js,es6,es8 基础
+* 稍微具备nodejs,koa2,js,es6,es8 基础
 
 * typescript 集成到项目中，执行命令前先构建 tsc && node
 
-* mongoDb 的安装与入门使用
+* mongoDB 的安装与入门使用 
+
+    - 普通软件安装
+    - 添加bin 路径到path 环境变量
+    - 方案一：手动启动服务  D:\Program Files\MongoDB\Server\4.0\bin>mongod  --dbpath D:\\mongoDBData\db 路径不能有空格，会中断读取
+    - 方案2：mongod --dbpath D:\MongoDB\data --logpath D:\MongoDB\log\MongoDB.log --logappend --serviceName MongoDB --auth --install  注册为服务 net start MongoDB 启动
+    - 测试：http://localhost:27017/
+    
+    ```
+        mongod --auth --port 27017 --dbpath /var/lib/mongodb 命令行启动服务
+        
+        //增加一个用户，具备操作所有数据库的权限，其他角色请查阅资料
+        use admin
+        db.createUser(
+        {
+            user: "root",
+            pwd: "123456",
+            roles: [ { role: "userAdminAnyDatabase", db: "admin" }, "readWriteAnyDatabase" ]
+        }
+        )
+
+        use admin
+        db.auth("myUserAdmin", "abc123" )
+
+        mongo --port 27017 -u "root" --authenticationDatabase "admin" -p  如果直接进入，很多操作没权限
+
+        //代码连接时需要注明admin 库，否者认证不通过。（花了我半天找原因)
+        mongodb://root:123456@localhost:27017/coffee?authSource=admin 通过admin 库验证权限
+    ```
+    [官网文档](https://docs.mongodb.com/manual/tutorial/enable-authentication/)
+    [菜鸟教程](https://www.runoob.com/mongodb/mongodb-query.html)
 
 # 项目结构
+
+
+
 
 
