--- a/docs/goal/2019flag.md
+++ b/docs/goal/2019flag.md
@@ -4,17 +4,17 @@
 规划非常重要,打开门才能进入另一个世界
 :::
 
-1. 专业技能
+1. 专业技能 （知识面变大）
 
-2. 公务员试水
+2. 公务员试水 （完成)
 
-3. 关节镜手术
+3. 关节镜手术 (放弃或延期)
 
-4. 探索职业发展与收入考量
+4. 探索职业发展与收入考量 （跳巢）
 
-5. 感情？
+5. 感情？ 
 
-6. 10万存款
+6. 10万存款 
 
 
 ::: warning 总结
