--- a/docs/docs/17koa2.md
+++ b/docs/docs/17koa2.md
@@ -38,6 +38,27 @@
     [官网文档](https://docs.mongodb.com/manual/tutorial/enable-authentication/)
     [菜鸟教程](https://www.runoob.com/mongodb/mongodb-query.html)
 
+### 关系型
+    优点：
+    1、易于维护：都是使用表结构，格式一致；
+    2、使用方便：SQL语言通用，可用于复杂查询；
+    3、复杂操作：支持SQL，可用于一个表以及多个表之间非常复杂的查询。
+    缺点：
+    1、读写性能比较差，尤其是海量数据的高效率读写；
+    2、固定的表结构，灵活度稍欠；
+    3、高并发读写需求，传统关系型数据库来说，硬盘I/O是一个很大的瓶颈。
+### 非关系型
+    缺点：
+    1、不提供sql支持，学习和使用成本较高；
+    2、无事务处理；
+    3、数据结构相对复杂，复杂查询方面稍欠。
+
+    非关系型数据库的分类和比较：
+    1、文档型
+    2、key-value型
+    3、列式数据库
+    4、图形数据库
+
 # 项目结构
 
 
