--- a/docs/docs/17koa2.md
+++ b/docs/docs/17koa2.md
@@ -6,11 +6,11 @@
 
 * typescript 集成到项目中，执行命令前先构建 tsc && node
 
-* mongoDB 的安装与入门使用 
+##  mongoDB 的安装与入门使用 
 
     - 普通软件安装
     - 添加bin 路径到path 环境变量
-    - 方案一：手动启动服务  D:\Program Files\MongoDB\Server\4.0\bin>mongod  --dbpath D:\\mongoDBData\db 路径不能有空格，会中断读取
+    - 方案1：手动启动服务  D:\Program Files\MongoDB\Server\4.0\bin>mongod  --dbpath D:\\mongoDBData\db 路径不能有空格，会中断读取
     - 方案2：mongod --dbpath D:\MongoDB\data --logpath D:\MongoDB\log\MongoDB.log --logappend --serviceName MongoDB --auth --install  注册为服务 net start MongoDB 启动
     - 测试：http://localhost:27017/
     
