--- a/docs/docs/17koa2.md
+++ b/docs/docs/17koa2.md
@@ -15,9 +15,10 @@
     - 测试：http://localhost:27017/
     
     ```
-        mongod --auth --port 27017 --dbpath /var/lib/mongodb 命令行启动服务
+        mongod --auth --port 27017 --dbpath /var/lib/mongodb 命令行启动服务（路径换成自己的)
         
         //增加一个用户，具备操作所有数据库的权限，其他角色请查阅资料
+        mongo //进入mongo 命令行 
         use admin
         db.createUser(
         {
@@ -35,8 +36,9 @@
         //代码连接时需要注明admin 库，否者认证不通过。（花了我半天找原因)
         mongodb://root:123456@localhost:27017/coffee?authSource=admin 通过admin 库验证权限
     ```
-    [官网文档](https://docs.mongodb.com/manual/tutorial/enable-authentication/)
-    [菜鸟教程](https://www.runoob.com/mongodb/mongodb-query.html)
+[官网文档](https://docs.mongodb.com/manual/tutorial/enable-authentication/)
+
+[菜鸟教程](https://www.runoob.com/mongodb/mongodb-query.html)
 
 ### 关系型
     优点：
