--- a/docs/docs/17koa2.md
+++ b/docs/docs/17koa2.md
@@ -66,6 +66,7 @@
 缺点：
 1.  上手难度比java 大，java 由下而上每个类型都是固定的，所以上层写法都是固定的，而js 不具备这点
 2.  很多第三方库也都是根据js 实现，对typescript 并没有多少示例导致初学者用typescript 第三方库不知道怎么写，例如 只参考 mongoose 官网，写不出来typescript
+3.  集成第三方框架很难搞，集成node 还没搞定
 
 优点：
 对维护，代码阅读确实有好处
