更新简历更新笔记

--- a/docs/main/17面试题.md
+++ b/docs/main/17面试题.md
@@ -47,8 +47,14 @@
 9. 移动端适配
 
 ```
-
+ 查看
 ```
+
+10. BFC
+
+* 4个条件 position:fixed/absolute; float; 根元素；display：nline-block，table-cell，table-caption；overflow 除了 visible 以外的值
+* 作用 (可以清除浮动/2个不同bfc的 元素不会外边距重叠)
+
 
 
 
