--- a/docs/main/17面试题.md
+++ b/docs/main/17面试题.md
@@ -1,4 +1,5 @@
-### 2019面试题
+## 2019面试题
+
 ####  一. 前言
 
 说明会比2018的时候更简洁，很多只是起一个帮助记忆的提示作用
@@ -7,15 +8,23 @@
 
 1. 盒模型:
 ```
-    border-box
-    content-box
+    border-box （怪异）
+    content-box （标准）
 ```
 2. 缓存
 ```
     字段记忆不清晰.
-    (1) 强缓存 
-    (2) 协商缓存
+    (1) 强缓存 cache-control max-age(缓存最长时间)  public(代理服务器/客户端) immutable:它这么设置的意思是为了让用户在刷新页面的时候不要去请求服务器 no-cache 跳过设置强缓存，不影响协商缓存   no-store 禁用所有缓存
+    (2) 协商缓存(eTag last-modified) 
+    请求回来时 带上etag hash 值 last-modified:文件的修改时间，精确到秒 再次请求查询是否缓存过期时 带上 if-modified-since /if-none-match
+
+  发请求-->看资源是否过期-->过期-->请求服务器-->服务器对比资源是否真的过期-->没过期-->返回304状态码-->客户端用缓存的老资源。
+
+  发请求-->看资源是否过期-->过期-->请求服务器-->服务器对比资源是否真的过期-->过期-->返回200状态码-->客户端如第一次接收该资源一样，记下它的cache-control中的max-age、etag、last-modified等。
+
 ```
+  [参考资料](https://www.jianshu.com/p/9c95db596df5)
+
 3. 图片类型
 
 .jpg png gif bmp svg webp
