--- a/docs/main/17面试题.md
+++ b/docs/main/17面试题.md
@@ -11,6 +11,7 @@
     border-box （怪异）
     content-box （标准）
 ```
+
 2. 缓存
 ```
     字段记忆不清晰.
@@ -47,9 +48,10 @@
 7. 跨域
 ```
   1 同源策略
-  浏览器禁止从一个源加载的文档脚本去请求另外一个源的资源。出于安全考虑，
+  浏览器禁止从一个源加载的文档脚本去请求另外一个源的资源。出于安全考虑
 ```
 [参考网站](https://segmentfault.com/a/1190000015597029?utm_source=tag-newest)
+
 8. 堆栈内存管理
 ```
  变量的存储 ，基本类型栈  引用放在堆  闭包数据也放在堆
@@ -60,13 +62,24 @@
 ```
  查看
 ```
+[移动端适配](https://blog.csdn.net/xiaxiaoxian/article/details/79395694)
 
 10. BFC
 
 * 4个条件 position:fixed/absolute; float; 根元素；display：nline-block，table-cell，table-caption；overflow 除了 visible 以外的值
 * 作用 (可以清除浮动/2个不同bfc的 元素不会外边距重叠)
 
+11. 清除浮动
 
+```
+.clearfix:after{
+  content:'';
+  display: block;
+  height:1px;
+  clear: both;
+  visibility: hidden;
+}
+```
 
 
 
