--- a/docs/main/17面试题.md
+++ b/docs/main/17面试题.md
@@ -63,6 +63,7 @@
  查看
 ```
 [移动端适配](https://blog.csdn.net/xiaxiaoxian/article/details/79395694)
+[移动端适配](https://segmentfault.com/a/1190000017784801)
 
 10. BFC
 
