--- a/docs/main/17面试题.md
+++ b/docs/main/17面试题.md
@@ -31,9 +31,10 @@
 .jpg png gif bmp svg webp
 
 4. http 协议的了解
+   应用层,会话层，传输层，网络层，数据链路层
 ```
   http/1.1 协议 
-  1. 定义特点：用于客户端和服务端进行通信，无状态协议（新的请求没有记录上次请求的信息，两者没有关系）
+  1. 定义特点：用于客户端和服务端进行通信，基于tcp 的应用层协议，无状态协议（新的请求没有记录上次请求的信息，两者没有关系）
   2. 组成：请求报文是由请求方法、请求 URI、协议版本、可选的请求首部字段和内容实体构成的。
   3. 
 ```
@@ -80,12 +81,21 @@
 }
 ```
 
+12. get post 的区别
+
+```
+  1 长度不一样，post 没有长度限制
+  2 get 只能传递 ascel, post 还能传递2进制
+```
+
+13. 原型链的
+
 
 
 
 
 
 #### 三. 中等题
-
+1. webpack 的优化做了哪些
 
 #### 四. 难题
