--- a/docs/main/17面试题.md
+++ b/docs/main/17面试题.md
@@ -88,7 +88,11 @@
   2 get 只能传递 ascel, post 还能传递2进制
 ```
 
-13. 原型链的
+13. 原型链的一些知识
+
+1. instanceof运算符用于测试构造函数的prototype属性是否出现在对象的原型链中的任何位置
+
+foo instanceof Foo===true
 
 
 
