--- a/docs/main/17面试题.md
+++ b/docs/main/17面试题.md
@@ -1,4 +1,11 @@
 ## 2019面试题
+#### 步伐规划
+1. 完善简历
+2. 多刷面试题
+3. vue 系列源码
+4. 组件库开发
+5. webpack 深入系列
+6. 表达训练（自信心，肢体语言）
 
 ####  一. 前言
 
@@ -94,9 +101,23 @@
 
 foo instanceof Foo===true
 
+2. 继承
 
+js 是面向对象的语言，跟面向类语言不同，继承不是通过复制构造函数的属性，而是通过属性prototype实现对象之间的关联，委托间接实现继承
 
+es5 原型链继承, 构造函数继承 
 
+[https://github.com/Advanced-Frontend/Daily-Interview-Question/issues/29](https://github.com/Advanced-Frontend/Daily-Interview-Question/issues/29)
+
+14. 异步操作
+
+async 函数返回一个 Promise 对象，当函数执行的时候，一旦遇到 await 就会先返回，等到触发的异步操作完成，再执行函数体内后面的语句。可以理解为，是让出了线程，跳出了 async 函数体。
+
+发展历史：
+  * 回调函数 
+  * promise
+  * generator
+  * async/await
 
 
 #### 三. 中等题
