--- a/docs/main/17面试题.md
+++ b/docs/main/17面试题.md
@@ -15,8 +15,8 @@
 
 ### 1. 盒模型:
 ```
-    border-box （怪异）
-    content-box （标准）
+  border-box （怪异）
+  content-box （标准）
 ```
 
 ### 2. 缓存
@@ -271,7 +271,6 @@ opacity  可以点击  visible 不可以点击
 * 没有arguments 字段 可以用...args 
 * 没有prototype 属性
 
-
 ### 24. ast 抽象语法树
 
 [参考教程](https://segmentfault.com/a/1190000016231512?utm_source=tag-newest)
@@ -306,8 +305,54 @@ display值为flex或者inline-flex的元素将会生成自适应容器（flex co
 text, button,password,radio,checkbox, file ,submit
 
 ### 28. html 标签
+- 按照html 文件回答
 
 html，body,meta, div，span， input，label,textarea, a， img ，video， audio, header,footer,asider,article ,section....
+
+### 29. ECMAScript,DOM,BOM
+
+- ECMAScript:js 核心语言功能
+- DOM: 操作网页的部分方法接口
+- BOM: 操作涉及浏览器窗口的方法或接口
+
+### 30.script 中的属性以及DOCTYPE 作用
+
+- src type async（延迟执行）
+- DOCTYPE 
+告诉浏览器解析html 的原则
+- 标识符的规则
+  $ _ 字母
+
+### 31.值类型以及怎么判断类型，判断空值（细节严谨的写法）
+
+String,Number,Boolean,Null,Object,Undefined, Symbol
+
+typeof instanceof isNaN Object.prototype.toString() === 
+
+业务简单判断：!undefined !null 注意会排除掉0 if(obj)； 比较好的用： if(obj!==undefined&&obj!==null)  一般封装function使用
+
+
+### 32. 运算符
+
+弱势：位操作符，优先级高低方面。(用得比较少) 其他细节例如比较全等一些特殊情况会发生隐式类型转换 例如 false==0 ,使用es6 === 不会出现这种问题
+
+- ~8  -9  非
+- &  与
+- |  或
+- ^（异或） >>(右移)  <<（左移） >>>(无符号右移) <<<（无符号左移） !(逻辑非) && ||（&& ||有一阵子以为是返回boolean值，实际上并不是）
+- arguments 严格模式修改不会修改参数值。非严格模式会修改参数
+
+### 33. 垃圾回收机制
+
+1. 标记清除法
+2. 引用计数法 循环引用会不删。
+
+
+
+
+
+
+
 
 ## 三. 中等题
 
