--- a/docs/main/172019i.md
+++ b/docs/main/172019i.md
@@ -1,4 +1,4 @@
-# 2019面试题
+# 2019
 ## 步伐规划
 1. 完善简历
 2. 多刷面试题
@@ -19,10 +19,11 @@
   content-box （标准）
 ```
 
-### 2. 缓存
+### 2. http请求缓存
 
 缓存可以说是性能优化中简单高效的一种优化方式了,`拓展涉及前端工程化工具，状态码，多种重定向`。
-```    
+
+```
 字段记忆不清晰.
 (1) 强缓存cache-control max-age(缓存最长时间)  public(代理服务器/客户端) immutable:它这么设置的意思是为了让用户在刷新页面的时候不要去请求服务器 no-cache 跳过设置强缓存，不影响协商缓存   no-store 禁用所有缓存
 (2) 协商缓存(eTag last-modified) 
@@ -31,7 +32,10 @@
 发请求-->看资源是否过期-->过期-->请求服务器-->服务器对比资源是否真的过期-->没过期-->返回304状态码-->客户端用缓存的老资源。
 
 发请求-->看资源是否过期-->过期-->请求服务器-->服务器对比资源是否真的过期-->过期-->返回200状态码-->客户端如第一次接收该资源一样，记下它的cache-control中的max-age、etag、last-modified等。
+
+优点：减少请求数量，节约带宽，降低服务器的压力
 ```
+
   [参考资料](https://www.jianshu.com/p/9c95db596df5)
   [缓存位置](https://www.jianshu.com/p/54cc04190252)
 
