--- a/docs/main/172019i.md
+++ b/docs/main/172019i.md
@@ -24,10 +24,11 @@
 缓存可以说是性能优化中简单高效的一种优化方式了,`拓展涉及前端工程化工具，状态码，多种重定向`。
 
 ```
+都是在response header 中返回。
 字段记忆不清晰.
-(1) 强缓存cache-control max-age(缓存最长时间)  public(代理服务器/客户端) immutable:它这么设置的意思是为了让用户在刷新页面的时候不要去请求服务器 no-cache 跳过设置强缓存，不影响协商缓存   no-store 禁用所有缓存
+(1) 强缓存cache-control： max-age(缓存最长时间) ，expires(http1.0 版本)  public 代理服务器/ private 客户端 immutable:它这么设置的意思是为了让用户在刷新页面的时候不要去请求服务器 no-cache 跳过设置强缓存，不影响协商缓存   no-store 禁用所有缓存
 (2) 协商缓存(eTag last-modified) 
-请求回来时 带上etag（hash） last-modified:文件的修改时间，精确到秒 再次请求查询是否缓存过期时 带上 if-modified-since /if-none-match
+请求回来时 带上etag（hash） last-modified:文件的修改时间，精确到秒 再次请求查询是否缓存过期时 带上if-modified-since /if-none-match
 
 发请求-->看资源是否过期-->过期-->请求服务器-->服务器对比资源是否真的过期-->没过期-->返回304状态码-->客户端用缓存的老资源。
 
@@ -35,7 +36,6 @@
 
 优点：减少请求数量，节约带宽，降低服务器的压力
 ```
-
   [参考资料](https://www.jianshu.com/p/9c95db596df5)
   [缓存位置](https://www.jianshu.com/p/54cc04190252)
 
