--- a/docs/main/172019i.md
+++ b/docs/main/172019i.md
@@ -24,9 +24,9 @@
 缓存可以说是性能优化中简单高效的一种优化方式了,`拓展涉及前端工程化工具，状态码，多种重定向`。
 
 ```
-都是在response header 中返回。
+这里讲的是response header中的字段。
 字段记忆不清晰.
-(1) 强缓存cache-control： max-age(缓存最长时间) ，expires(http1.0 版本)  public 代理服务器/ private 客户端 immutable:它这么设置的意思是为了让用户在刷新页面的时候不要去请求服务器 no-cache 跳过设置强缓存，不影响协商缓存   no-store 禁用所有缓存
+(1) 强缓存cache-control： max-age(http 1.1缓存最长时间)  public 代理服务器/ private 客户端 immutable:它这么设置的意思是为了让用户在刷新页面的时候不要去请求服务器 no-cache 跳过设置强缓存，不影响协商缓存   no-store 禁用所有缓存 ; expires(http1.0 版本)
 (2) 协商缓存(eTag last-modified) 
 请求回来时 带上etag（hash） last-modified:文件的修改时间，精确到秒 再次请求查询是否缓存过期时 带上if-modified-since /if-none-match
 
@@ -47,14 +47,16 @@
 
 - jpg 有损
 - png 无损
-- webp 图片数据量大时使用
+- webp 图片数据量大时可以使用,注意兼容性问题。
 
 [webp 在减少图片体积和流量上的效果如何？—— WebP 技术实践分享](https://juejin.im/post/59e81f6351882549fc5122d2)
 
-### 4. http 协议的了解
-   应用层,会话层，传输层，网络层，数据链路层
+### 4. 了解各种网络协议 tcp/ip协议簇，http,https，websocket,udp,tcp，ssl,ftp 协议,DNS 域名系统
 
-   超文本传输协议
+  应用层(http,ftp)，传输层(tcp,udp)，网络层(ip)，链路层（ARP,RAPR）
+
+  超文本传输协议
+  
   * http1.0
     keep-alive 实现tcp 长连接
 
