--- a/docs/goal/2019flag.md
+++ b/docs/goal/2019flag.md
@@ -4,24 +4,27 @@
 规划非常重要,打开门才能进入另一个世界
 :::
 
-1. 专业技能 （知识面变大）
+1. 专业技能 （前端水平有所上升）
 
 2. 公务员试水 （完成)
 
 3. 关节镜手术 (放弃或延期，失败)
 
-4. 探索职业发展与收入考量 （跳巢,平安,oppo 效果一般）
+4. 探索职业发展与收入考量 （跳巢,平安,oppo 无效，富士康发展，不行）
 
-5. 感情？ 
+5. 感情？
 
-6. 10万存款
-
+6. 10万存款 (勉强)
 
 ::: warning 总结
 今年猛点好
 :::
 
 ### 2020年
+
+1. 离职
+2. 女朋友
+3. 赚钱
 
 ### 2021年
 1. 存款：50w
