--- a/docs/main/172019i.md
+++ b/docs/main/172019i.md
@@ -172,8 +172,9 @@ Array.isArray() ie8 兼容性
  
 2、重绘，回流
 
-* 重绘：dom 元素样式改变，例如color，backgroud-color ，不促发重排，会执行重绘
-* 回流：dom 的大小改变，导致后面元素或者祖先元素位置发生改变
+* 重绘：当我们对 DOM 的修改导致了样式的变化、却并未影响其几何属性（比如修改了颜色或背景色）时，浏览器不需重新计算元素的几何属性、直接为该元素绘制新的样式（跳过了上图所示的回流环节）。这个过程叫做重绘。由此我们可以看出，重绘不一定导致回流，回流一定会导致重绘。
+
+* 回流：当我们对 DOM 的修改引发了 DOM 几何尺寸的变化（比如修改元素的宽、高或隐藏元素等）时，浏览器需要重新计算元素的几何属性（其他元素的几何属性和位置也会因此受到影响），然后再将计算的结果绘制出来。这个过程就是回流（也叫重排）。
 
 3、 浏览器优化
 
