--- a/docs/goal/2020flag.md
+++ b/docs/goal/2020flag.md
@@ -3,6 +3,7 @@
 ::: warning 名言
 规划非常重要,打开门才能进入另一个世界
 :::
+0. 调整心态，认真尝试
 
 1. 找一个满意的工作
 
@@ -14,10 +15,12 @@
 
 5. 注意身体锻炼，尤其是脑袋保护
 
-6. 关节手术
+6. 关节手术，大概率不做了吧
 
 7. 找个女朋友？？？
 
 8. 试试副业要吗
 
 9. 治好甲亢
+
+10. 抱怨于是无补，唯有做好当下。
