--- a/docs/goal/2020flag.md
+++ b/docs/goal/2020flag.md
@@ -26,22 +26,22 @@
 10. 抱怨于是无补，唯有做好当下。保持愉悦
 
 
-::: 技术学习
-    1 react
-    2 flutter
-    3 小程序
-    4 node
+::: tip 技术学习
+1 react
+2 flutter
+3 小程序
+4 node
 :::
 
 
-::: 思维方法，行动准则
+::: tip 思维方法，行动准则
 
-    要想掌握既轻松又不失控的知识工作，就必须要征服工作流程的
-    5 个阶段，而这正是我所教授的这套方法的核心部分。无论在什么情
-    况下，我们在工作时都将经历这 5 个阶段：首先，我们收集（Collect）
-    一切引起我们注意的事务和信息，对这些材料进行加工（Process），
-    决定下一步行动，对这些行动要进行有效的组织整理（Organize），
-    以便我们回顾和检视（Review）这些行动，好确定要执行（Do）的
-    下一步行动，这样才能完成工作。这些阶段共同构成了我们生活中的
-    “横向”管理。
+要想掌握既轻松又不失控的知识工作，就必须要征服工作流程的
+5 个阶段，而这正是我所教授的这套方法的核心部分。无论在什么情
+况下，我们在工作时都将经历这 5 个阶段：首先，我们收集（Collect）
+一切引起我们注意的事务和信息，对这些材料进行加工（Process），
+决定下一步行动，对这些行动要进行有效的组织整理（Organize），
+以便我们回顾和检视（Review）这些行动，好确定要执行（Do）的
+下一步行动，这样才能完成工作。这些阶段共同构成了我们生活中的
+“横向”管理。
 :::
