--- a/docs/main/172019i.md
+++ b/docs/main/172019i.md
@@ -17,8 +17,8 @@
 
 ### 1. 盒模型
 ```
-  border-box （怪异）
-  content-box （标准）
+  border-box （怪异 +border）
+  content-box （标准 +padding）
 ```
 
 ### 2. http请求缓存
