--- a/docs/frontend/es6-10.md
+++ b/docs/frontend/es6-10.md
@@ -1,2 +1,41 @@
 ### 新版js 面试复习
 
+```
+if ([] == false) { console.log(1) }
+if ({} == false) { console.log(2) }
+if ([]) { console.log(3) }
+If ([1] == [1]) { console.log(4) }
+
+```
+
+
+宏任务，微任务，如果微任务结局依赖新一个的宏任务的话，微任务的结果放在宏任务后面，否则执行完所有微任务
+```
+console.log('start');
+setTimeout(_ => {
+    console.log('start settimeout 1');
+ Promise.resolve().then(_ => {
+     console.log('promise 1');
+            setTimeout(_ => { console.log('inner setTimeout') }, 0)
+        
+ }).then(_ => {
+  console.log('promise 2');
+ })
+}, 0)
+console.log('end');
+
+Let p = new Promise(resolve => {
+  console.log(1);
+  setTimeout(_ => {
+    console.log(2);
+    resolve(1);
+  })
+});
+
+p.then(_ => {
+  console.log(3)
+})
+
+start>end>1>start settimeout 1>promise 1>promise 2>2>3>inner setTimeout
+```
+
