--- a/docs/frontend/es5-10.md
+++ b/docs/frontend/es5-10.md
@@ -1,15 +1,16 @@
-### 新版js 面试复习
+### js 面试复习
 
 ```
-if ([] == false) { console.log(1) }
+if ([] == false) { console.log(1) } //转成布尔值
 if ({} == false) { console.log(2) }
-if ([]) { console.log(3) }
-If ([1] == [1]) { console.log(4) }
+if ([]) { console.log(3) } // 不转
+if ([1] == [1]) { console.log(4) }
 
 ```
 
 
 宏任务，微任务，如果微任务结局依赖新一个的宏任务的话，微任务的结果放在宏任务后面，否则执行完所有微任务
+
 ```
 console.log('start');
 setTimeout(_ => {
@@ -39,3 +40,34 @@ p.then(_ => {
 start>end>1>start settimeout 1>promise 1>promise 2>2>3>inner setTimeout
 ```
 
+测试题2
+
+```
+  <script>
+    async function async1() {
+      console.log('a');
+      await async2();
+      console.log('b');
+    }
+    async function async2() {
+      console.log('c');
+    }
+
+    console.log('d');
+
+    setTimeout(function () {
+      console.log('e');
+    }, 0)
+
+    async1();
+
+    new Promise(function (resolve) {
+      console.log('f');
+      resolve();
+    }).then(function () {
+      console.log('g');
+    });
+    console.log('h');
+
+    // d a c f h b g e
+```
