--- a/docs/work/midea/task/2. 2020_9_29scoreActivity.md
+++ b/docs/work/midea/task/2. 2020_9_29scoreActivity.md
@@ -20,9 +20,11 @@
 [https://docs.qq.com/sheet/DTVJseUlRYlhYZFd2?tab=BB08J2](https://docs.qq.com/sheet/DTVJseUlRYlhYZFd2?tab=BB08J2)
 
 
-* H5 静态脚本你在这里 D:\midea_project\php\trunk\htdocs\static\wp_iot\src\score_expand
+* H5 静态脚本你在这里 D:\midea_project\php\trunk\htdocs\static\wp_iot\src\score_expand （jquery 的话）, 我是用了vue-project
 
 * 要上传发布的图片放在这个文件夹下面：D:\midea_project\php\trunk\htdocs\static\h5\img\score_expand 上传到dev，估计只有正式环境的才是cdn
+
+* controller 引导页面入口
 
 
 # 任务评估（静态页面，首页比较复杂，其他就上弹框列表，totast 之类的常规）
@@ -37,7 +39,44 @@
 
 1. 设计稿的问题 （使用pxcook 可以解决，另外设计师也提供了更完善的图）
 
-2. 
+2. 入口引导问题，是否使用多页面。 单页面可能打包体积太大，但是这个活动并非太复杂，可以允许单页面，使用vue-router。
+
+3. scss calc 使用变量（插值语法 #{}）
+
+4. 
+    发现mint 没有vertical 滚动，使用vant， 还是没有多行文字滚动
+
+    问题一： 寻找版本，寻找api 参数设置：多行文字轮播 版本探究，本质 swiper ， vue 组件（调用swiper） vue-awesome-swiper 
+    问题二： 使用后 self=undefined ，执行self.params 报错，中断（排查问题） 局部引入换成全局引入（解决） ，花了2个小时
+
+
+5. 自定义弹窗，（背景会滚动,transition 没起作用，排查，没有底部安全适配,css设置即可。自己的组件）
+
+
+6. git 非快速合并产生一条新commit 记录，后续留意
+
+一般建议git fetch+ merge 取代 git pull
+
+
+7. flex:1 本想充满剩下却被 填充物充大溢出 ，解决方案，去掉多余的dom
+
+
+8. 移动端不设置box-sizing:border-box , 高度100% 没有加上padding
+
+9. 2 个tab 内容物，滚动条高度相互影响。 有点不明白
+
+
+
+
+集中反馈 待反馈问题：
+
+1. 膨胀倍数图片是特殊的，但是倍数是灵活的。是否需要调整设计
+
+2. excel 字段值具体内容。
+
+3. banner 积分推荐商品接口
+
+
 
 ## 总结
 
