更新工作笔记,git 命令熟悉

--- a/docs/work/midea/task/2. 2020_9_29scoreActivity.md
+++ b/docs/work/midea/task/2. 2020_9_29scoreActivity.md
@@ -61,11 +61,21 @@
 7. flex:1 本想充满剩下却被 填充物充大溢出 ，解决方案，去掉多余的dom
 
 
-8. 移动端不设置box-sizing:border-box , 高度100% 没有加上padding
+8. 移动端不设置box-sizing:border-box , 高度100% 没有加上padding， 标准盒子就是没加padding 的
 
-9. 2 个tab 内容物，滚动条高度相互影响。 有点不明白
+测试例子：　E:\myself\draftCode\css\border-box.html
 
+9. 2 个tab 内容物，滚动条高度相互影响。 有点不明白（跟vue 服用dom 有关。 添加了key 强制渲染）
 
+10. modal 用组件分离后, v-show 的控制出现问题
+
+    之前： main ===> m-popup (v-model)     后： main =====>　card ===> m-popup  main =====>　card 中途怎么协商 show
+
+    都用v-model 会违背 子修改父prop 的问题。
+
+    解决方案： main===> card 使用 v-model（prop:isShow）      card====>m-popup 使用 :show="isShow"， show + change 事件 
+
+11. '<div> 1111<span> 222</span> 333'    222 会偏上 ，设置 div line-height 为容器高度，可以解决
 
 
 集中反馈 待反馈问题：
@@ -74,11 +84,24 @@
 
 2. excel 字段值具体内容。
 
-3. banner 积分推荐商品接口
+3. banner 积分推荐商品接口 
 
 
 
 ## 总结
+
+1. 
+
+2020 10 21 完成了大部分静态页面，逻辑梳理大致完成。 剩下细节，以及局部实现 
+
+实现了一个倒计时组件
+
+2. 
+
+2020 10 22 
+
+微信小程序 iconfont 不能支持相对路径 。直接使用css 里的 base64 编码，把其他的链接都删掉了
+
 
 
 
