--- a/docs/work/midea/task/1. 2020_9_23tbportal.md
+++ b/docs/work/midea/task/1. 2020_9_23tbportal.md
@@ -29,6 +29,8 @@
 			D:\midea_project\php\trunk\htdocs\static\wp\src\m_help_center\pages\detail.js
 
 
+淘宝小程序链路：http 请求----聚石塔接口机器--聚石塔商城机器--金山云--cms
+
 ### 任务需求评估
 
 2天（2020/9/24-2020/9/25）
