--- a/docs/work/midea/task/2. 2020_9_29scoreActivity.md
+++ b/docs/work/midea/task/2. 2020_9_29scoreActivity.md
@@ -1,4 +1,4 @@
-## 积分膨胀活动
+## 积分膨胀活动 （大需求）
 
 ### 写在前面
 
@@ -8,7 +8,9 @@
 
 ### 时间
 
-    2020/9/30 到 2020/11/6 号转体验。 包括小程序的一些坑。 vant-list 的坑。 
+    2020/9/30 到 2020/11/6 号转体验。 包括小程序的一些坑。 vant-list （父级必须scroll 或者auto） 的坑（最后因为第一页也会显示没有更多弃坑）。  11/20 号用户体验 ， 这个项目花费了差不多2个月
+
+    11-23号基本稳定，可以发布了
 
 ### 说明
 
@@ -162,7 +164,7 @@
 
 
 
-接口都用await 写法，导致js 穿行，影响了页面渲染和 input 输入卡顿
+接口都用await 写法，导致js 穿行，影响了页面渲染和 input 输入卡顿，实际上并不是。。。 是由于swiper 数据量过大，且input 频繁 触发 swiper 渲染导致的。。
 
 
   async getRankList() {
@@ -182,5 +184,22 @@
                 console.log(e);
             }
         },
+
+
+性能实现问题：
+
+小程序图片高度自适应，结果出现闪屏， 移动端按钮不够大结果很难点击, loading 动画， 排队动画。
+
+ `https://wow.techbrood.com/fiddle/5439`
+
+
+
+图片得居中问题，有时看起来总是有点
+
+
+ 
+
+
+
 
 
