--- a/docs/work/midea/task/2. 2020_9_29scoreActivity.md
+++ b/docs/work/midea/task/2. 2020_9_29scoreActivity.md
@@ -86,7 +86,7 @@
 12. ios js focus()无效，除非由事件触发直接执行，否则都是无法 ，所以placeholder 换成使用input 的placeholder
 
 
-13. input 更新比较慢
+13. input 更新比较慢,(感觉会促发整个页面的重新渲染，无解，最后限制了swiper 的文字数量)
 
 14. 微信小程序 input：value， 再 setData 会导致界面再渲染一次， 还能看出延迟渲染，分离了 内存和界面的响应值
 
