上传工作日记

--- a/docs/work/midea/task/2. 2020_9_29scoreActivity.md
+++ b/docs/work/midea/task/2. 2020_9_29scoreActivity.md
@@ -117,6 +117,12 @@
 
 实现了一个倒计时组件
 
+倒计时切到后台终止的解决方案：
+
+https://blog.csdn.net/weixin_33970449/article/details/88728650
+
+https://www.jianshu.com/p/cc9134fc58fa
+
 2. 
 
 2020 10 22 
