--- a/docs/main/172019i.md
+++ b/docs/main/172019i.md
@@ -51,6 +51,8 @@
 - png 无损, 支持透明度，png-24 支持更复杂的渐变
 - webp 图片数据量大时可以使用,注意兼容性问题。
 
+阿里云图片支持一定的url 配置 优化图片 [阿里云图片api](https://help.aliyun.com/document_detail/44686.html?spm=5176.8195614.499545.7.2f767d45fiYsJ0)
+
 [webp 在减少图片体积和流量上的效果如何？—— WebP 技术实践分享](https://juejin.im/post/59e81f6351882549fc5122d2)
 
 ### 4. 了解各种网络协议 tcp/ip协议簇，http,https，websocket,udp,tcp，ssl,ftp 协议,DNS 域名系统
