--- a/docs/work/midea/task/2021/20210423(c4a登录注册注销).md
+++ b/docs/work/midea/task/2021/20210423(c4a登录注册注销).md
@@ -4,4 +4,25 @@
 
 ## 需求文档
 
-https://imuumy.axshare.com/#id=soe3ks&p=%E9%9C%80%E6%B1%82%E4%BB%8B%E7%BB%8D
+原型： https://imuumy.axshare.com/#id=soe3ks&p=%E9%9C%80%E6%B1%82%E4%BB%8B%E7%BB%8D
+
+需求： http://dms.midea.com/mdds/pms/index.php?m=story&f=view&storyID=1782
+
+开发排期： https://docs.qq.com/sheet/DTXZEY2F5U1VKcUhR?tab=BB08J2
+
+
+## 细项
+
+1. 小程序协议，注销，登录注册
+
+  1. （协议，目测4个接口，一个弹窗） 提供获取协议的接口 当前用户是否同意最新版本协议 提供同意协议的接口 提供解绑openId的接口
+
+  2. c4a h5页面回到小程序公共页面做登录
+
+
+  app_m\application\controllers\act\taobao\spi.php
+
+2. 注意点：
+
+集成原本的埋点配合
+
