--- a/docs/work/midea/task/2021/20210423(c4a登录注册注销).md
+++ b/docs/work/midea/task/2021/20210423(c4a登录注册注销).md
@@ -10,19 +10,26 @@
 
 开发排期： https://docs.qq.com/sheet/DTXZEY2F5U1VKcUhR?tab=BB08J2
 
-
 ## 细项
 
 1. 小程序协议，注销，登录注册
 
-  1. （协议，目测4个接口，一个弹窗） 提供获取协议的接口 当前用户是否同意最新版本协议 提供同意协议的接口 提供解绑openId的接口
+1. （协议，目测 4 个接口，一个弹窗） 提供获取协议的接口 当前用户是否同意最新版本协议 提供同意协议的接口 提供解绑 openId 的接口
 
-  2. c4a h5页面回到小程序公共页面做登录
+1. c4a h5 页面回到小程序公共页面做登录
 
-
-  app_m\application\controllers\act\taobao\spi.php
+app_m\application\controllers\act\taobao\spi.php
 
 2. 注意点：
 
 集成原本的埋点配合
+
+
+3. 积分抽奖cgi 增加注销中拦截
+
+## 登录注册页的一些逻辑
+
+
+## 遗留了会员通的问题
+
 
