--- a/docs/docs/17koa2.md
+++ b/docs/docs/17koa2.md
@@ -11,7 +11,57 @@
     - 普通软件安装
     - 添加bin 路径到path 环境变量
     - 方案1：手动启动服务  D:\Program Files\MongoDB\Server\4.0\bin>mongod  --dbpath D:\\mongoDBData\db 路径不能有空格，会中断读取
+    - "D:\Program Files\MongoDB\Server\4.2\bin\mongod.exe" --config "D:\Program Files\MongoDB\Server\4.2\bin\mongod.cfg"--install --serviceName "MongoDB" 
+    
     - 方案2：mongod --dbpath D:\MongoDB\data --logpath D:\MongoDB\log\MongoDB.log --logappend --serviceName MongoDB --auth --install  注册为服务 net start MongoDB 启动
+
+    - 方案3（最终版2021）
+        - 4.2 版本custom 可以自己生成2个文件和服务，不用自己装，同时开启认证只需要修改配置文件即可
+```
+# mongod.conf
+
+# for documentation of all options, see:
+#   http://docs.mongodb.org/manual/reference/configuration-options/
+
+# Where and how to store data.
+storage:
+  dbPath: D:\Program Files\MongoDB\Server\4.2\data
+  journal:
+    enabled: true
+#  engine:
+#  mmapv1:
+#  wiredTiger:
+
+# where to write logging data.
+systemLog:
+  destination: file
+  logAppend: true
+  path:  D:\Program Files\MongoDB\Server\4.2\log\mongod.log
+
+# network interfaces
+net:
+  port: 27017
+  bindIp: 127.0.0.1
+
+
+#processManagement:
+
+security:
+  authorization: enabled
+
+#operationProfiling:
+
+#replication:
+
+#sharding:
+
+## Enterprise-Only Options:
+
+#auditLog:
+
+#snmp:
+
+```
     - 测试：http://localhost:27017/
     
     ```
@@ -39,6 +89,8 @@
 [官网文档](https://docs.mongodb.com/manual/tutorial/enable-authentication/)
 
 [菜鸟教程](https://www.runoob.com/mongodb/mongodb-query.html)
+
+(参考教程)[https://www.cnblogs.com/zhif97/p/12806245.html]
 
 ### 关系型
     优点：
